--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 atomicwrites==1.3.0
 attrs==19.1.0
+colorama==0.4.1
 importlib-metadata==0.18
-more-itertools==7.1.0
-pathlib2==2.3.4
-pkg-resources==0.0.0
+more-itertools==7.2.0
 pluggy==0.12.0
 py==1.8.0
 pytest==3.10.1
